[refactor] Update for API changes